added Tread added Calculator added ResultPage & model

--- a/Test/qml.qrc
+++ b/Test/qml.qrc
@@ -4,5 +4,8 @@
         <file>WorkPage.qml</file>
         <file>ChartPage.qml</file>
         <file>ComboBoxFxModel.qml</file>
+        <file>ResultPage.qml</file>
+        <file>ResultPageHeader.qml</file>
+        <file>ResultPageDelegate.qml</file>
     </qresource>
 </RCC>
